# rust-vs-c-asm

./: .gitignore  Cargo.toml  Makefile  README.md  Rust_vs_C_Assembly_DeepDive.md  build.sh  compare_asm.sh
oop/: bound.rs  call.rs  distribute.rs  oop1.rs  oop2.rs  opp3.rs  opp4.rs  opp5.rs  regex.rs  request.rs  serde.rs  triat.rs
perf-labs/: Cargo.toml  README.md  scripts.txt
perf-labs/scripts/: cargo_asm_example.sh  find_libc.sh  gdb_layout_asm.gdb  gdb_run.sh  gen_all_flamegraphs.sh  gen_flamegraph.sh  gen_pair_flamegraphs.sh  objdump_compare_indirect.sh  objdump_full.sh  perf_compare.sh  trace_futex.sh  trace_malloc.sh  trace_realloc.sh  trace_sched_switch.sh
src/c/: bounds_check.c  generics.c  immutable.c  ownership.c  pointer.c  recursion.c  threading.c  unsafe_hw.c
src/rust/: bounds_check.rs  generics.rs  immutable.rs  ownership.rs  pointer.rs  recursion.rs  threading.rs  unsafe_hw.rs
